Fixes #1 - Including bomberman as a dependencie.

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url "http://dl.bintray.com/gabrielsr/bomberman" }
     }
 }
 
@@ -40,9 +41,9 @@ project(":desktop") {
 
 project(":core") {
     apply plugin: "java"
-
-
     dependencies {
+ 
+        compile "br.unb.cic:bomberman:0.02"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     }
 }
