--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,11 @@ allprojects {
     apply plugin: "idea"
 
     version = '1.0'
+        
     ext {
         appName = 'bomberman-ui'
         gdxVersion = '1.4.1'
-        roboVMVersion = '1.0.0-alpha-04'
+        roboVMVersion = '1.0.0- alpha-04'
         box2DLightsVersion = '1.2'
         ashleyVersion = '1.3.1'
         aiVersion = '1.4.0'
@@ -31,6 +32,7 @@ allprojects {
 project(":desktop") {
     apply plugin: "java"
 
+    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
     dependencies {
         compile project(":core")
