--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,3 +9,7 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 eclipse.project {
     name = appName + "-core"
 }
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
