--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -44,3 +44,7 @@ task afterEclipseImport(description: "Post processing after project generation",
     printer.print(classpath)
   }
 }
+
+dependencies {
+    testCompile group: 'junit', name: 'junit', version: '4.+'
+}
