Modificando a versão do bomberman no gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,9 @@ project(":desktop") {
 project(":core") {
     apply plugin: "java"
     dependencies {
- 
         compile "br.unb.cic:bomberman:0.03"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        testCompile 'junit:junit:4.9'
+        testCompile "junit:junit:4.9"
     }
 }
 
