--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ project(":desktop") {
         compile project(":core")
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
         testCompile 'junit:junit:4.9'
     }
 }
@@ -45,7 +46,7 @@ project(":desktop") {
 project(":core") {
     apply plugin: "java"
     dependencies {
-        compile "br.unb.cic:bomberman:0.03"
+        compile "br.unb.cic:bomberman:0.04"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         testCompile "junit:junit:4.9"
     }
