--- a/build.gradle
+++ b/build.gradle
@@ -46,9 +46,15 @@ project(":core") {
     apply plugin: "java"
     dependencies {
  
-        compile "br.unb.cic:bomberman:0.03"
+        compile "br.unb.cic:bomberman:0.04"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         testCompile 'junit:junit:4.9'
+        
+        eclipse {
+  			project {
+    		referencedProjects 'bomberman'
+  			}
+  		}
     }
 }
 
