--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,12 @@ project(":core") {
     apply plugin: "java"
     dependencies {
  
-        compile "br.unb.cic:bomberman:0.05"
+        compile "unb:ecsmomberman:0.05"
+        
+        compile "net.onedaybeard.artemis:artemis-odb:0.8.1"
+    	compile "net.mostlyoriginal.artemis-odb:contrib-core:0.7.1" 
+    	compile "net.mostlyoriginal.artemis-odb:contrib-eventbus:0.7.1" 
+        
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         testCompile 'junit:junit:4.9'
         
